# plasma-ai-usage-panel

./: .gitignore  LICENSE  README.md  claude.py  codex.py  common.py  copilot.py  install.sh  pyproject.toml  zai.py  zen.py
plasmoid/: metadata.json
plasmoid/contents/config/: main.xml
plasmoid/contents/ui/: configGeneral.qml  main.qml
