[project]
name = "plasma-ai-usage-panel"
version = "0.1.0"
description = "Monitor Claude, ChatGPT, GitHub Copilot, OpenCode Zen, and Z.ai usage in KDE Plasma"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["kde", "plasma", "plasmoid", "claude", "chatgpt", "openai", "copilot", "github", "usage", "monitor", "opencode", "zen", "zai"]
authors = [
    { name = "gustavobragac", email = "gustavobragac@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "browser-cookie3>=0.20.1",
    "curl-cffi>=0.13.0",
    "json-five>=1.1.2",
]

[project.scripts]
claude-usage = "claude:main"
codex-usage = "codex:main"
copilot-usage = "copilot:main"
zen-balance = "zen:main"
zai-usage = "zai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude.py", "codex.py", "copilot.py", "zen.py", "zai.py", "common.py"]

[dependency-groups]
dev = []
